fixup! fixup! Wrap trip planner form in callout and add sticky position

--- a/apps/site/web/static/css/_trip_plan.scss
+++ b/apps/site/web/static/css/_trip_plan.scss
@@ -9,7 +9,7 @@
 
 .trip-plan-form-container {
   @include media-breakpoint-up(md) {
+    position: sticky;
     top: 0;
-    position: sticky
   }
 }
